trying navbar spacing fix

--- a/wp-content/themes/yaledailynews/bootstrap/less/multimedia.less
+++ b/wp-content/themes/yaledailynews/bootstrap/less/multimedia.less
@@ -25,6 +25,16 @@ body {
 	background: @grayDarker;
 }
 
+#menu-multimedia-1 {
+  width = 100%;
+}
+#menu-multimedia-2 {
+  width = 100%;
+}
+#menu-multimedia-3 {
+  width = 100%;
+}
+
 a {
 	color: @grayLight;
 	&:hover {
